minor fix for css styling on fb elements
some elements were rendering slightly outside the bounds of the div
they were contained in.  this caused strange behavior with buttons
being cut off until the outlet underneath them was filled.

also updated robots.txt to stop our site from appearing in search
results.  we only want ICS students to know about our site.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -128,6 +128,10 @@ http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/
     clear: both;
 }
 
+.fb-login-button {
+    margin-left: 20px;
+}
+
 .fb-widget {
     height: 100px;
     width: 20%;
@@ -146,7 +150,6 @@ http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/
 
 .fb-name {
     line-height: 50px;
-    margin-bottom: 10px;
     vertical-align: middle;
     float: right;
 }
